<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_gravity="left"
        android:text="@string/bienvenue_sur"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/tuniads" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="297.09dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:background="@drawable/textedit_style"
        android:elevation="4dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="297.09dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:background="@drawable/textedit_style"
        android:elevation="4dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        style="@style/RedRoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="40dp"
        android:text="@string/connexion" />

    <Button
        android:id="@+id/createAccountButton"
        style="@style/RedRoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="16dp"
        android:text="@string/cr_er_un_compte" />
</LinearLayout>