<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">
    <!-- activity_product_details.xml -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewProduct"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
             />

        <TextView
            android:id="@+id/textViewProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewProduct"
            android:layout_marginTop="16dp"
            android:text="@string/product_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewProductName"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/strikethrough"
                android:text="@string/product_price"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/strikethrough"
                android:paddingStart="2dp"
                android:text="DT"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewProductPromo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/price_promos"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:text="%OFF"
                android:textColor="@color/red"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:progressTint="#FFCC01"
                android:max="5" />

            <TextView
                android:id="@+id/nb_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingBar"
                android:layout_marginTop="20dp"
                android:text="@string/nb_ratings"
                android:paddingStart="5dp"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>