<!-- activity_add_product.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">


    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="297.09dp"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textedit_style"
        android:elevation="4dp"
        android:hint="@string/newproduct_name"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextProductPrice"
        android:layout_width="297.09dp"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textedit_style"
        android:elevation="4dp"
        android:hint="@string/newproduct_price"
        android:inputType="number"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

    <EditText
        android:id="@+id/editTextProductPromo"
        android:layout_width="297.09dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/textedit_style"
        android:elevation="4dp"
        android:hint="@string/pourcentage_promotion"
        android:inputType="number"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductPrice"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Select Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextProductName" />

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSelectImage" />

    <Button
        android:id="@+id/buttonAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="Add Product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductPrice" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="Add A New Product"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextProductName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/productPriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Product's Price"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextProductPrice"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/productPromoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="New Product's Promo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/productPriceTxt"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductPrice" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="126dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="cancelBtn"
        android:text="@string/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddProduct" />

</androidx.constraintlayout.widget.ConstraintLayout>
